# cloud-native-streaming

./: README.md  pyproject.toml
app/: chatter.py  message.py  reader.py  streamcli.py  writer.py
pravega/: run.sh
