[tool.poetry]
name = "pravega-streaming"
version = "0.1.0"
description = ""
authors = ["Alex Foley <alexandergfoley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pravega = "^0.3.2"
docopt = "^0.6.2"
requests = "^2.28.1"
asyncio-atexit = "^1.0.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
